# dr-cmake-template

./: CMakeLists.txt  README.md  build-android.sh  build-ios.sh  build-unix.sh  build-wasm.sh  publish-wasm.sh
app/: main.rb
metadata/: game_metadata.txt
native-app/: cext.cpp  cext.h
tools/: README.md  host_wasm.py
